--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,18 +13,17 @@
 
 <body>
     <div class="all">
-        <%- include('partials/header') %>
         <section class="AboutMe">
             <div class="Box">
                 <img src="/images/Eu.jpg" alt="" class="myimg">
                 <h1 class="titles">Bem-Vindo(a)!</h1>
                 <div class="info-texto">
-                    <p class="text">Olá! Me chamo Gustavo Almeida Camargo, atualmente estou cursando Desenvolvimento
+                    <p class="text">Olá! Me chamo <%= nome %>, atualmente estou cursando Desenvolvimento
                         de
                         Software
-                        Multiplataforma pela Fatec, e Jogos Digitais pela Anhanguera, ambas estou no Segundo
-                        Semestre. Estou sempre buscando aprender mais sobre o universo da programação, uma das
-                        linguagens a qual mais gosto é C#!</p>
+                        Multiplataforma pela <%= faculdade %>, e Jogos Digitais pela <%= facul %>, ambas estou no Segundo
+                        Semestre. Estou sempre buscando aprender mais sobre o universo da programação! Uma das
+                        linguagens que mais gosto é <%= lang %> </p>
                     <p class="text">Aqui no meu portfólio, você poderá conhecer um pouco mais sobre mim, conhecendo
                         minhas habilidades, projetos e muito mais! E caso queira entrar em contato comigo, no final
                         deixei disponiveis algumas formas de contato. Obrigado!</p>
@@ -32,7 +31,7 @@
 
                 <div class="btn-container">
                     <a class="btn">Baixar Curriculo</a>
-                    <a href="/habilidades" class="btn">Prosseguir</a>
+                    <a href="/projeto" class="btn">Prosseguir</a>
                 </div>
 
             </div>
