--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,10 +5,10 @@
             </div>
             <div class="menu-options hidden">
                 <a href="/"><i class="fa fa-home"></i></a>
-                <a href="/habilidades"><i class="fas fa-tools"></i></a>
-                <a href="#"><i class="fas fa-project-diagram"></i></a>
-                <a href="#"><i class="fas fa-laptop-code"></i></a>
-                <a href="#"><i class="fa fa-user"></i></a>
+                <a href="#habilidades"><i class="fas fa-tools"></i></a>
+                <a href="#projetos"><i class="fas fa-project-diagram"></i></a>
+                <a href="#cursos"><i class="fas fa-laptop-code"></i></a>
+                <a href="#contato"><i class="fa fa-user"></i></a>
             </div>
         </div>
     </div>
