Atualizações: Adição de download de curriculo, e caminho para o vercel

--- a/views/projeto.ejs
+++ b/views/projeto.ejs
@@ -250,7 +250,7 @@
                 <div class="Box Cont">
                     <div class="topo">
                         <img src="/images/linkle.png" alt="" class="TImg">
-                        <span class="subtitles">Linkedln</span>
+                        <span class="subtitles">LinkedIn</span>
                     </div>
 
                     <div class="conte">
