--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="btn-container">
-                    <a class="btn">Baixar Curriculo</a>
+                    <a class="btn">Baixar Curriculo</a> <!--Colocar curriculo-->
                     <a href="/projeto" class="btn">Prosseguir</a>
                 </div>
 
