Atualizações: Adição de download de curriculo e caminho para o vercel

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="btn-container">
-                    <a class="btn">Baixar Curriculo</a> <!--Colocar curriculo-->
+                    <a class="btn" href="/docs/GustavoCurriculo.pdf" download>Baixar Currículo</a>
                     <a href="/projeto" class="btn">Prosseguir</a>
                 </div>
 
