Fix: Correção de caminho de imagens

--- a/views/projeto.ejs
+++ b/views/projeto.ejs
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/styleH.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/styleH.css">
     <link href="https://fonts.googleapis.com/css2?family=Saira&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Gustavo Almeida - Portfólio</title>
@@ -21,37 +21,37 @@
                 <div class="Box">
                     <h1 class="subtitles">Programação</h1>
                     <div class="badge">
-                        <img src="/images/c-sharp.png" alt="Flutter" class="icon">
+                        <img src="./images/c-sharp.png" alt="Flutter" class="icon">
                         <span>C#</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/js.png" alt="Flutter" class="icon">
+                        <img src="./images/js.png" alt="Flutter" class="icon">
                         <span>JavaScript</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/python.png" alt="Flutter" class="icon">
+                        <img src="./images/python.png" alt="Flutter" class="icon">
                         <span>Python</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/typescript.png" alt="" class="icon">
+                        <img src="./images/typescript.png" alt="" class="icon">
                         <span>TypeScript</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/sql-server.png" alt="" class="icon">
+                        <img src="./images/sql-server.png" alt="" class="icon">
                         <span>Sql</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/html.png" alt="" class="icon">
+                        <img src="./images/html.png" alt="" class="icon">
                         <span>HTML</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/text.png" alt="" class="icon">
+                        <img src="./images/text.png" alt="" class="icon">
                         <span>CSS</span>
                     </div>
 
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="badge">
-                        <img src="/images/Tailwind.png" alt="" class="icon">
+                        <img src="./images/Tailwind.png" alt="" class="icon">
                         <span>Tailwind CSS</span>
                     </div>
 
@@ -70,17 +70,17 @@
                     <h1 class="subtitles">Ferramentas</h1>
 
                     <div class="badge">
-                        <img src="/images/logo.png" alt="" class="icon">
+                        <img src="./images/logo.png" alt="" class="icon">
                         <span>Visual Studio</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/logovs.png" alt="" class="icon">
+                        <img src="./images/logovs.png" alt="" class="icon">
                         <span>Visual Studio Code</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/figma.png" alt="" class="icon">
+                        <img src="./images/figma.png" alt="" class="icon">
                         <span>Figma</span>
                     </div>
 
@@ -90,32 +90,32 @@
                     </div>
 
                     <div class="badge">
-                        <img src="/images/github.png" alt="" class="icon">
+                        <img src="./images/github.png" alt="" class="icon">
                         <span>GitHub</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/social.png" alt="" class="icon">
+                        <img src="./images/social.png" alt="" class="icon">
                         <span>Git</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/mysql-database.png" alt="" class="icon">
+                        <img src="./images/mysql-database.png" alt="" class="icon">
                         <span>MySql WorkBench</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/jira.png" alt="" class="icon">
+                        <img src="./images/jira.png" alt="" class="icon">
                         <span>Jira</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/physics.png" alt="" class="icon">
+                        <img src="./images/physics.png" alt="" class="icon">
                         <span>React</span>
                     </div>
 
                     <div class="badge">
-                        <img src="/images/node-js.png" alt="" class="icon">
+                        <img src="./images/node-js.png" alt="" class="icon">
                         <span>NodeJs</span>
                     </div>
 
@@ -128,7 +128,7 @@
             <div class="pj1">
                 <div class="Box Proj">
                     <h2 class="subtitles">TCC - Jogo "History of a Nation"</h2>
-                    <img src="/images/HoN.png" alt="" class="imgp">
+                    <img src="./images/HoN.png" alt="" class="imgp">
                     <p class="text">Jogo feito como projeto de TCC do curso Técnico de Informática pelo joseense. O jogo
                         conta a história de um robô que tem a missão de recuperar alguns artefatos históricos após o
                         incêndio do Museu Nacional de História do Rio De Janeiro.</p>
@@ -136,7 +136,7 @@
 
                 <div class="Box Proj">
                     <h2 class="subtitles">API Fatec - Página de Vereadores</h2>
-                    <img src="/images/APIFat.png" alt="" class="imgp1">
+                    <img src="./images/APIFat.png" alt="" class="imgp1">
                     <p class="text">Projeto feito durante periodo eleitoral com o intuito de melhorar a visão geral dos
                         vereadores da cidade de São José dos Campos. O usuário pode utilizar diversos filtros para poder
                         comparar os canditados a vereador, e encontra informações de forma mais clara.</p>
@@ -146,7 +146,7 @@
 
                 <div class="Box Proj">
                     <h2 class="subtitles">API Fatec - Helpnei</h2>
-                    <img src="/images/Helpnei.png" alt="" class="imgp2">
+                    <img src="./images/Helpnei.png" alt="" class="imgp2">
                     <p class="text">O Projeto ainda está em desenvolvimento. O objeto desse projeto é desenvolver uma
                         unica página com dashboards contendo informações de diferente empresas patrocinadoras, e também,
                         realizar cadastro de usuários para que ele possa escolher qual empresa ele deseja ser
@@ -168,7 +168,7 @@
                 <div class="Box Course">
                     <div class="TitleC">
                         <div class="badgeC">
-                            <img src="/images/unity.png" alt="" class="iconC">
+                            <img src="./images/unity.png" alt="" class="iconC">
                             <span>Desenvolvimento de Jogos - Em andamento</span>
                         </div>
                         <p class="text">Aprendizado do Curso:</p>
@@ -183,7 +183,7 @@
                 <div class="Box Course">
                     <div class="TitleC">
                         <div class="badgeC">
-                            <img src="/images/python.png" alt="" class="iconC">
+                            <img src="./images/python.png" alt="" class="iconC">
                             <span>Curso de Python - Em andamento.</span>
                         </div>
                         <p class="text">Aprendizado do Curso:</p>
@@ -196,7 +196,7 @@
                 <div class="Box Course">
                     <div class="TitleC">
                         <div class="badgeC">
-                            <img src="/images/c-sharp.png" alt="" class="iconC">
+                            <img src="./images/c-sharp.png" alt="" class="iconC">
                             <span>Curso C# - Em andamento.</span>
                         </div>
                         <p class="text">Aprendizado do Curso:</p>
@@ -220,7 +220,7 @@
             <div class="pj1">
                 <div class="Box Cont">
                     <div class="topo">
-                        <img src="/images/github.png" alt="" class="TImg">
+                        <img src="./images/github.png" alt="" class="TImg">
                         <span class="subtitles">GitHub</span>
                     </div>
 
@@ -233,7 +233,7 @@
 
                 <div class="Box Cont">
                     <div class="topo">
-                        <img src="/images/gmail.png" alt="" class="TImg">
+                        <img src="./images/gmail.png" alt="" class="TImg">
                         <span class="subtitles">Email</span>
                     </div>
 
@@ -249,7 +249,7 @@
 
                 <div class="Box Cont">
                     <div class="topo">
-                        <img src="/images/linkle.png" alt="" class="TImg">
+                        <img src="./images/linkle.png" alt="" class="TImg">
                         <span class="subtitles">LinkedIn</span>
                     </div>
 
