fix: Correção de caminhos de imagens e css

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Saira&display=swap" rel="stylesheet">
     <title>Home</title>
@@ -15,7 +15,7 @@
     <div class="all">
         <section class="AboutMe">
             <div class="Box">
-                <img src="./images/Eu.jpg" alt="" class="myimg">
+                <img src="/images/Eu.jpg" alt="" class="myimg">
                 <h1 class="titles">Bem-Vindo(a)!</h1>
                 <div class="info-texto">
                     <p class="text">Olá! Me chamo <%= nome %>, atualmente estou cursando Desenvolvimento
@@ -30,8 +30,8 @@
                 </div>
 
                 <div class="btn-container">
-                    <a class="btn" href="./docs/GustavoCurriculo.pdf" download>Baixar Currículo</a>
-                    <a href="./projeto" class="btn">Prosseguir</a>
+                    <a class="btn" href="/docs/GustavoCurriculo.pdf" download>Baixar Currículo</a>
+                    <a href="/projeto" class="btn">Prosseguir</a>
                 </div>
 
             </div>
