Correção de palavras

--- a/views/projeto.ejs
+++ b/views/projeto.ejs
@@ -163,7 +163,7 @@
                     </div>
 
                     <div class="conte">
-                        <p class="text">Cocê pode me enviar um email, ou enviar um formulário para tratar de qualquer
+                        <p class="text">Você pode me enviar um email, ou enviar um formulário para tratar de qualquer
                             assunto!</p>
                         <div class="Cont-BTN">
                             <a href=https://mail.google.com/mail/?view=cm&fs=1&to=gua7422@gmail.com&su=Assunto&body=Olá!"
