Adição de "Logo"para abas, correção de arquivos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <%- include('head') %>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
@@ -30,7 +31,7 @@
                 </div>
 
                 <div class="btn-container">
-                    <a class="btn" href="/docs/GustavoCurriculo.pdf" download>Baixar Currículo</a>
+                    <a class="btn" href="/docs/CV-Gustavo.pdf" download>Baixar Currículo</a>
                     <a href="/projeto" class="btn">Prosseguir</a>
                 </div>
 
